--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy - Passbags</title>
+    <title>Privacy Policy - passbag</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -36,14 +36,14 @@
     <p>Effective Date: April 16, 2025</p>
 
     <p>
-      Welcome to Passbags! Your privacy is important to us. This Privacy Policy
+      Welcome to passbag! Your privacy is important to us. This Privacy Policy
       explains how we collect, use, and protect your information when you use
       our app.
     </p>
 
     <h2>Information We Collect</h2>
     <p>
-      Passbags does not collect or store any personal information. All data,
+      passbag does not collect or store any personal information. All data,
       including passwords and secrets, is processed locally on your device and
       is not transmitted to any server.
     </p>
@@ -57,7 +57,7 @@
 
     <h2>Third-Party Services</h2>
     <p>
-      Passbags does not integrate with any third-party services or analytics
+      passbag does not integrate with any third-party services or analytics
       tools. Your data remains private and secure on your device.
     </p>
 
@@ -83,7 +83,7 @@
     </p>
 
     <h2>Developer Information</h2>
-    <p>Passbags is developed and maintained by Sostene Munezero Bagira.</p>
+    <p>passbag is developed and maintained by Sostene Munezero Bagira.</p>
     <div class="social-links">
       Connect with the developer:
       <a href="https://www.linkedin.com/in/sostene/" target="_blank"
@@ -92,6 +92,6 @@
       <a href="https://github.com/munezerobagira" target="_blank">GitHub</a>
     </div>
 
-    <p>Thank you for using Passbags!</p>
+    <p>Thank you for using passbag!</p>
   </body>
 </html>
